--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-API_URL=https://api.escuelajs.co/api/v1/
-API_KEY=https://api.escuelajs.co
+API_URL=https://api.escuelajs.co/api/v1
+API_FAKE=https://fakestoreapi.com
 MODE=dev
